# encoding_detection

./: README.md  setup.cfg
src/encoding_detection/: __init__.py  detect_encoding.py
