[metadata]
name = encoding_detection
version = dev
author = n-l-i
author_email = 
description = A Python package for detect the encoding used for various data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/n-l-i/encoding_detection
project_urls =
    Bug Tracker = https://github.com/n-l-i/encoding_detection/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages =
    encoding_detection
python_requires = >=3.6
install_requires =
    chardet
